# helix

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
helix-api/: Cargo.toml
helix-api/src/: main.rs
helix-core/: Cargo.toml
helix-core/src/: error.rs  fingerprint.rs  freshness.rs  lib.rs  lsh.rs  simd.rs
