[workspace]
members = [
    "helix-core",
    "helix-api",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
axum           = { version = "0.8.8" }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = { version = "1" }

# Redis
redis          = { version = "1.1.0", features = ["aio", "tokio-comp"] }
deadpool-redis = { version = "0.23.0" }

# Hashing
sha2           = { version = "0.11.0" }
xxhash-rust    = { version = "0.8", features = ["xxh32"] }

# Index internals
smallvec       = { version = "1", features = ["union"] }
parking_lot    = { version = "0.12" }
rayon          = { version = "1" }

# Error handling
thiserror      = { version = "2.0.18" }

# Observability
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus         = { version = "0.14.0" }

# Utilities
dotenvy = { version = "0.15" }
